<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:contentDescription="@string/desc_background"
        android:foreground="@drawable/bvc_campus"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/txt_smartBite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="60dp"
        android:text="SMARTBITE"
        android:textColor="#FDFDFD"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="28dp"
        android:text="@string/email"
        android:textColor="#FF8700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_background" />

    <EditText
        android:id="@+id/editTxt_email"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:background="#20265E"
        android:backgroundTint="#20265E"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="email"
        android:textAlignment="center"
        android:textColor="#FFFEFE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="#FF8700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt_email" />

    <EditText
        android:id="@+id/editTxt_password"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#20265E"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="password"
        android:textAlignment="center"
        android:textColor="#FFFDFD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#20265E"
        android:onClick="login"
        android:text="Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxt_password" />

    <LinearLayout
        android:id="@+id/layout_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:visibility="gone"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Incorrect email or password" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Okay" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>